LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/ExpertiseMaster__c.object-meta.xml
<CustomObject>
    <label>Expertise Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expertise Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>