LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/BU_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Name__c</fullName>
    <label>BU Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>