LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/BUL__c.field-meta.xml
<CustomField>
    <fullName>BUL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master7</relationshipName>
    <type>Lookup</type>
</CustomField>