LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/Ecosystems_and_Offering_leader__c.field-meta.xml
<CustomField>
    <fullName>Ecosystems_and_Offering_leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ecosystems and Offering leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master</relationshipName>
    <type>Lookup</type>
</CustomField>