LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/Efficiency_and_Results_Leader__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_and_Results_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efficiency and Results Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master4</relationshipName>
    <type>Lookup</type>
</CustomField>