LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/LOV_Id__c.field-meta.xml
<CustomField>
    <fullName>LOV_Id__c</fullName>
    <description>Expertise</description>
    <externalId>true</externalId>
    <label>LOV Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>