LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/Mid__c.field-meta.xml
<CustomField>
    <fullName>Mid__c</fullName>
    <description>Expertise MID</description>
    <label>Mid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>