LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/People_Care_Leader__c.field-meta.xml
<CustomField>
    <fullName>People_Care_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>People Care Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master5</relationshipName>
    <type>Lookup</type>
</CustomField>