LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/Risk_and_Quality_Leader__c.field-meta.xml
<CustomField>
    <fullName>Risk_and_Quality_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk and Quality Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>