LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/Standards_and_Solutions_Leader__c.field-meta.xml
<CustomField>
    <fullName>Standards_and_Solutions_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standards and Solutions Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master2</relationshipName>
    <type>Lookup</type>
</CustomField>