LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/fields/Tech_and_Innovation_Leader__c.field-meta.xml
<CustomField>
    <fullName>Tech_and_Innovation_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech and Innovation Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expertise_Master3</relationshipName>
    <type>Lookup</type>
</CustomField>