LinKreta_POC_Repository/force-app/main/default/objects/ExpertiseMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BU_Name__c</columns>
    <columns>LOV_Id__c</columns>
    <columns>Mid__c</columns>
    <columns>Is_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Ecosystems_and_Offering_leader__c</columns>
    <columns>Efficiency_and_Results_Leader__c</columns>
    <columns>Risk_and_Quality_Leader__c</columns>
    <columns>Standards_and_Solutions_Leader__c</columns>
    <columns>Tech_and_Innovation_Leader__c</columns>
    <columns>BUL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>